Adição do Css e estilização

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <div class="box"id="block-7"></div>
         <div class="box"id="block-8"></div>
         <div class="box"id="block-9"></div>
-        <div id="sccoreboard-container">
+        <div id="scoreboard-container">
+            <h2>Placar: </h2>
             <span class="score-blox">
                 <span id="x-scoreboard">x</span>:
                 <span id="scoreboard-1">0</span>
