--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="o"></div>
     </div>
     <div id="message" class="hide">
-        <p></p>
+        <p>asd </p>
     </div>
     <script src="script.js"></script>
 </body>
