--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             </span>
             </div>
     </div>
+    
     <div class="hide">
         <div class="x">X</div>
         <div class="o"></div>
@@ -41,6 +42,12 @@
     <div id="message" class="hide">
         <p>asd </p>
     </div>
+    
+        <marquee behavior="scroll" direction="left">Seja Bem-Vindo</marquee>
+        <marquee behavior="scroll" direction="right">Se divirta!!</marquee>
     <script src="script.js"></script>
+    <footer>
+        <p>&copy; Leandro Victor - Todos os direitos reservados!</p> 
+    </footer>
 </body>
 </html>
