atualização de teste no titulo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Jogo da Velha</h1>
+    <h1 id="titulo">Jogo da Velha</h1>
     <div id="buttons-container">
         <button id="2-players">2 Jogadores</button>
         <button id="ai-player">Contra IA</button>
